--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,126 @@
-﻿aiodns==3.1.1
-aiohttp==3.9.1
-aiosignal==1.3.1
-anyio==4.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-gunicorn==19.7.1
-Babel==2.14.0
-beautifulsoup4==4.12.2
-bidict==0.22.1
-bleach==6.1.0
-blinker==1.7.0
-ccxt==4.2.7
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-contourpy==1.1.0
-cryptography==41.0.7
-cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-executing==2.0.1
-fastdtw==0.3.4
-fastjsonschema==2.19.1
-Flask==3.0.0
-Flask-SocketIO==5.3.6
-fonttools==4.47.0
-fqdn==1.5.1
-frozenlist==1.4.1
-h11==0.14.0
-idna==3.6
-ipykernel==6.28.0
-ipython==8.19.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mistune==3.0.2
-mpld3==0.5.10
-multidict==6.0.4
-nbclient==0.9.0
-nbconvert==7.14.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-nltk==3.8.1
-notebook_shim==0.2.3
-numpy==1.26.3
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
-pandocfilters==1.5.0
-parso==0.8.3
-pillow==10.2.0
-platformdirs==4.1.0
-plotly==5.18.0
-praw==7.7.1
-prawcore==2.4.0
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-psutil==5.9.7
-pure-eval==0.2.2
-pycares==4.4.0
-pycparser==2.21
-Pygments==2.17.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-engineio==4.8.1
-python-json-logger==2.0.7
-python-socketio==5.10.0
-pytz==2023.3.post1
-PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.32.0
-regex==2023.12.25
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.16.2
-scikit-learn==1.3.2
-scipy==1.11.4
-seaborn==0.13.1
-Send2Trash==1.8.2
-setuptools==69.0.3
-simple-websocket==1.0.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-stack-data==0.6.3
-tenacity==8.2.3
-terminado==0.18.0
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.1
-types-python-dateutil==2.8.19.14
-typing_extensions==4.9.0
-tzdata==2023.4
-update-checker==0.18.0
-uri-template==1.3.0
-urllib3==2.1.0
-wcwidth==0.2.12
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==3.0.1
-wsproto==1.2.0
-yarl==1.9.4
+﻿aiodns==*
+aiohttp==*
+aiosignal==*
+anyio==*
+argon2-cffi==*
+argon2-cffi-bindings==*
+arrow==*
+asttokens==*
+async-lru==*
+attrs==*
+gunicorn==*
+Babel==*
+beautifulsoup4==*
+bidict==*
+bleach==*
+blinker==*
+ccxt==*
+certifi==*
+cffi==*
+charset-normalizer==*
+click==*
+colorama==*
+comm==*
+contourpy==*
+cryptography==*
+cycler==*
+debugpy==*
+decorator==*
+defusedxml==*
+executing==*
+fastdtw==*
+fastjsonschema==*
+Flask==*
+Flask-SocketIO==*
+fonttools==*
+fqdn==*
+frozenlist==*
+h11==*
+idna==*
+ipykernel==*
+ipython==*
+isoduration==*
+itsdangerous==*
+jedi==*
+Jinja2==*
+joblib==*
+json5==*
+jsonpointer==*
+jsonschema==*
+jsonschema-specifications==*
+kiwisolver==*
+MarkupSafe==*
+matplotlib==*
+matplotlib-inline==*
+mistune==*
+mpld3==*
+multidict==*
+nbclient==*
+nbconvert==*
+nbformat==*
+nest-asyncio==*
+nltk==*
+notebook_shim==*
+numpy==*
+overrides==*
+packaging==*
+pandas==*
+pandocfilters==*
+parso==*
+pillow==*
+platformdirs==*
+plotly==*
+praw==*
+prawcore==*
+prometheus-client==*
+prompt-toolkit==*
+psutil==*
+pure-eval==*
+pycares==*
+pycparser==*
+Pygments==*
+pyparsing==*
+python-dateutil==*
+python-dotenv==*
+python-engineio==*
+python-json-logger==*
+python-socketio==*
+pytz==*
+PyYAML==*
+pyzmq==*
+referencing==*
+regex==*
+requests==*
+rfc3339-validator==*
+rfc3986-validator==*
+rpds-py==*
+scikit-learn==*
+scipy==*
+seaborn==*
+Send2Trash==*
+setuptools==*
+simple-websocket==*
+six==*
+sniffio==*
+soupsieve==*
+stack-data==*
+tenacity==*
+terminado==*
+threadpoolctl==*
+tinycss2==*
+tornado==*
+tqdm==*
+traitlets==*
+types-python-dateutil==*
+typing_extensions==*
+tzdata==*
+update-checker==*
+uri-template==*
+urllib3==*
+wcwidth==*
+webcolors==*
+webencodings==*
+websocket-client==*
+Werkzeug==*
+wsproto==*
+yarl==*
