--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,126 @@
-﻿aiodns==*
-aiohttp==*
-aiosignal==*
-anyio==*
-argon2-cffi==*
-argon2-cffi-bindings==*
-arrow==*
-asttokens==*
-async-lru==*
-attrs==*
-gunicorn==*
-Babel==*
-beautifulsoup4==*
-bidict==*
-bleach==*
-blinker==*
-ccxt==*
-certifi==*
-cffi==*
-charset-normalizer==*
-click==*
-colorama==*
-comm==*
-contourpy==*
-cryptography==*
-cycler==*
-debugpy==*
-decorator==*
-defusedxml==*
-executing==*
-fastdtw==*
-fastjsonschema==*
-Flask==*
-Flask-SocketIO==*
-fonttools==*
-fqdn==*
-frozenlist==*
-h11==*
-idna==*
-ipykernel==*
-ipython==*
-isoduration==*
-itsdangerous==*
-jedi==*
-Jinja2==*
-joblib==*
-json5==*
-jsonpointer==*
-jsonschema==*
-jsonschema-specifications==*
-kiwisolver==*
-MarkupSafe==*
-matplotlib==*
-matplotlib-inline==*
-mistune==*
-mpld3==*
-multidict==*
-nbclient==*
-nbconvert==*
-nbformat==*
-nest-asyncio==*
-nltk==*
-notebook_shim==*
-numpy==*
-overrides==*
-packaging==*
-pandas==*
-pandocfilters==*
-parso==*
-pillow==*
-platformdirs==*
-plotly==*
-praw==*
-prawcore==*
-prometheus-client==*
-prompt-toolkit==*
-psutil==*
-pure-eval==*
-pycares==*
-pycparser==*
-Pygments==*
-pyparsing==*
-python-dateutil==*
-python-dotenv==*
-python-engineio==*
-python-json-logger==*
-python-socketio==*
-pytz==*
-PyYAML==*
-pyzmq==*
-referencing==*
-regex==*
-requests==*
-rfc3339-validator==*
-rfc3986-validator==*
-rpds-py==*
-scikit-learn==*
-scipy==*
-seaborn==*
-Send2Trash==*
-setuptools==*
-simple-websocket==*
-six==*
-sniffio==*
-soupsieve==*
-stack-data==*
-tenacity==*
-terminado==*
-threadpoolctl==*
-tinycss2==*
-tornado==*
-tqdm==*
-traitlets==*
-types-python-dateutil==*
-typing_extensions==*
-tzdata==*
-update-checker==*
-uri-template==*
-urllib3==*
-wcwidth==*
-webcolors==*
-webencodings==*
-websocket-client==*
-Werkzeug==*
-wsproto==*
-yarl==*
+﻿aiodns
+aiohttp
+aiosignal
+anyio
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asttokens
+async-lru
+attrs
+gunicorn
+Babel
+beautifulsoup4
+bidict
+bleach
+blinker
+ccxt
+certifi
+cffi
+charset-normalizer
+click
+colorama
+comm
+contourpy
+cryptography
+cycler
+debugpy
+decorator
+defusedxml
+executing
+fastdtw
+fastjsonschema
+Flask
+Flask-SocketIO
+fonttools
+fqdn
+frozenlist
+h11
+idna
+ipykernel
+ipython
+isoduration
+itsdangerous
+jedi
+Jinja2
+joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
+kiwisolver
+MarkupSafe
+matplotlib
+matplotlib-inline
+mistune
+mpld3
+multidict
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+nltk
+notebook_shim
+numpy
+overrides
+packaging
+pandas
+pandocfilters
+parso
+pillow
+platformdirs
+plotly
+praw
+prawcore
+prometheus-client
+prompt-toolkit
+psutil
+pure-eval
+pycares
+pycparser
+Pygments
+pyparsing
+python-dateutil
+python-dotenv
+python-engineio
+python-json-logger
+python-socketio
+pytz
+PyYAML
+pyzmq
+referencing
+regex
+requests
+rfc3339-validator
+rfc3986-validator
+rpds-py
+scikit-learn
+scipy
+seaborn
+Send2Trash
+setuptools
+simple-websocket
+six
+sniffio
+soupsieve
+stack-data
+tenacity
+terminado
+threadpoolctl
+tinycss2
+tornado
+tqdm
+traitlets
+types-python-dateutil
+typing_extensions
+tzdata
+update-checker
+uri-template
+urllib3
+wcwidth
+webcolors
+webencodings
+websocket-client
+Werkzeug
+wsproto
+yarl
